# splits

./: .gitignore  .gitmodules  .prettierignore  Anchor.toml  CONTRIBUTING.md  Justfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  biome.json  biome.jsonc  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
.claude/: CLAUDE.md
apps/dashboard/: index.html  package.json  project.json
apps/dashboard/src/: main.tsx  router.tsx
apps/dashboard/src/components/: Header.tsx
apps/dashboard/src/components/evm/: columns.tsx  create-split-form.tsx  data-table.tsx  split-detail-row.tsx  wallet-button.tsx
apps/dashboard/src/contexts/: chain-context.tsx
apps/dashboard/src/hooks/: use-copy-to-clipboard.ts  use-splits-evm.ts  use-splits-solana.ts
apps/dashboard/src/layouts/: RootLayout.tsx
apps/dashboard/src/lib/: chain-helpers.ts  splits-helpers.ts  utils.ts  wagmi.ts  zod-resolver.ts
apps/dashboard/src/pages/: About.tsx  Dashboard.tsx  EvmDashboard.tsx  SolanaDashboard.tsx  index.ts
apps/docs/: astro.config.mjs  package.json  project.json  react-router.config.ts  vite.config.ts
apps/docs/adr/: 0001-sdk-v0.8.0-faremeter-integration.md  0003-splits-sdk-solana-api-design.md
apps/docs/app/: root.tsx  routes.ts
apps/docs/app/components/: search.tsx
apps/docs/app/docs/: page.tsx
apps/docs/app/lib/: layout.shared.tsx  source.ts
apps/docs/benchmarks/: README.md
apps/docs/content/docs/: how-it-works.mdx  index.mdx
apps/facilitator/: package.json  tsconfig.json  tsconfig.tsbuildinfo  wrangler.jsonc
apps/facilitator/src/: index.ts  types.ts
apps/facilitator/src/lib/: signer.ts  validation.test.ts  validation.ts
apps/facilitator/src/routes/: routes.test.ts  settle.ts  supported.ts  verify.ts
apps/market/: .cta.json  .dev.vars.example  package.json  schema.sql  tsconfig.tsbuildinfo  vite.config.ts  wrangler.jsonc
apps/market/src/: routeTree.gen.ts  server.ts  styles.css
apps/market/src/components/: About.tsx  Dashboard.tsx  Header.tsx
apps/market/src/gateway/: consent.ts  index.ts  service-bridge.ts  sign.ts  tunnel.ts
apps/market/src/hooks/: use-smart-account.ts  use-transaction-history.ts
apps/market/src/lib/: auth.tsx  constants.ts  helius.ts  transaction-parser.ts  utils.ts
apps/market/src/routes/: __root.tsx  about.tsx  explore.tsx  index.tsx  pay.tsx  splits.tsx  tabs.tsx
apps/market/src/server/: oauth.ts  services.ts  splits.ts  tokens.ts
apps/tabs/: README.md  index.html  package.json  project.json  tsconfig.app.json  tsconfig.json  tsconfig.worker.json  vite.config.ts  wrangler.json
apps/tabs/.wrangler/deploy/: config.json
apps/tabs/src/: main.tsx
apps/tabs/src/components/: SmartAccountPanel.tsx
apps/tabs/src/hooks/: use-copy-to-clipboard.ts  use-smart-account.ts
apps/tabs/src/layouts/: RootLayout.tsx
apps/tabs/src/lib/: squads.ts  utils.ts
apps/tabs/src/pages/: About.tsx  Dashboard.tsx
apps/tabs/src/react-app/: main.tsx  router.tsx
apps/tabs/src/worker/: index.ts
benchmarks/: compute_units.md
contracts/: .env.example  .gitignore  README.md  foundry.toml  goldsky-config.json
contracts/script/: Deploy.s.sol  LocalValidation.s.sol
contracts/src/: Errors.sol  SplitConfigImpl.sol  SplitFactory.sol  Types.sol
contracts/src/interfaces/: ISplitConfigImpl.sol  ISplitFactory.sol
contracts/test/: Base.t.sol  Fork.t.sol  GasBenchmark.t.sol  Invariant.t.sol  SplitConfigImpl.t.sol  SplitFactory.t.sol
docs/: glossary.md  specification-evm.md  specification.md  usage.md
docs/adr/: 0001-sdk-v0.8.0-faremeter-integration.md  0002-sdk-idempotent-client-api.md  0003-splits-sdk-solana-api-design.md  0004-cascade-market-architecture.md  0005-base-chain-support.md  0005-cascade-market-base-support.md
docs/benchmarks/: compute_units.md
docs/evm-implementation-scaffold/: SplitConfig.sol  SplitConfig.t.sol  SplitFactory.sol  foundry.toml
docs/evm-implementation-scaffold/sdk/: index.ts
examples/mcps/github/: Dockerfile  README.md  biome.json  cascade.yaml  compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json
examples/mcps/github/src/: client.ts  index.ts  types.ts
programs/cascade-splits/: CHANGELOG.md  Cargo.toml  project.json
programs/cascade-splits/benches/: compute_units.rs
programs/cascade-splits/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs  utils.rs
programs/cascade-splits/src/instructions/: accept_protocol_authority.rs  close_split_config.rs  create_split_config.rs  execute_split.rs  initialize_protocol.rs  mod.rs  transfer_protocol_authority.rs  update_protocol_config.rs  update_split_config.rs
programs/cascade-splits/tests/: test_accept_protocol_authority.rs  test_close_split_config.rs  test_create_split_config.rs  test_execute_split.rs  test_initialize_protocol.rs  test_transfer_protocol_authority.rs  test_update_protocol_config.rs  test_update_split_config.rs
programs/cascade-splits/tests/helpers/: accounts.rs  errors.rs  instructions.rs  mod.rs  serialization.rs
python/splits-sdk-evm/: CHANGELOG.md  LICENSE  README.md  project.json  pyproject.toml
python/splits-sdk-evm/src/cascade_splits_evm/: __init__.py  _exceptions.py  abi.py  async_client.py  async_helpers.py  client.py  constants.py  ensure.py  execute.py  helpers.py  types.py
python/splits-sdk-evm/tests/: conftest.py  test_async_helpers.py  test_client_init.py  test_client_sync.py  test_error_handling.py  test_gas_options.py  test_helpers.py  test_integration.py  test_validation.py
scripts/: accept-protocol-authority.ts  extract-changelog.py  get-protocol-config.ts  initialize-protocol.ts  transfer-protocol-authority.ts  update-fee-wallet.ts
sdk/: idl.json  package.json
sdk/src/: discriminators.ts  index.ts  kit.ts  pda.ts  types.ts  web3.ts
sdk/tests/: integration.test.ts  parity.test.ts
tests/: cascade-splits.ts  smoke.test.ts
(+59 files in other folders)
