[package]
name = "cascade-splits"
version = "0.1.0"
description = "Non-custodial payment splitter for Solana - distribute incoming payments to multiple recipients automatically"
edition = "2021"
license = "MIT"
authors = ["Cascade Labs <hello@cascade-protocol.xyz>"]
repository = "https://github.com/cascade-protocol/splits"
homepage = "https://cascade-protocol.xyz"
keywords = ["solana", "payment", "split", "escrow", "defi"]

[lib]
crate-type = ["cdylib", "lib"]
name = "cascade_splits"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
verbose = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
solana-security-txt = "1.1.1"

[dev-dependencies]
mollusk-svm = "0.5.1"
mollusk-svm-bencher = "0.5.1"
mollusk-svm-programs-token = "0.5.1"
solana-sdk = "2.2"
spl-token = "7.0"
spl-associated-token-account = "6.0"

[[bench]]
name = "compute_units"
harness = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
