[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-splits"
version = "0.1.0"
description = "Python SDK for Cascade Splits - Non-custodial payment splitting on Base (EVM)"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Cascade Protocol", email = "hello@cascade.fyi" }
]
keywords = ["ethereum", "base", "payments", "splits", "web3", "usdc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "web3>=6.0.0",
    "eth-account>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/cascade-protocol/splits"
Documentation = "https://github.com/cascade-protocol/splits/tree/main/packages/splits-sdk-python"
Repository = "https://github.com/cascade-protocol/splits"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade_splits"]
